# learn-gcp

./: README.md  learn-gcp.code-workspace
big-query/: .gitignore  Dockerfile  README.md  pyproject.toml
big-query/project_00/: README.md  constants.py  data.py  database.py  db.py  main.py  people.py  pyproject.toml
big-query/project_01/: README.md  constants.py  gsod_requests.py  main.py  queries.py
big-query/project_01/queries/: correlation.sql  extreme_weather_frequency_by_year.sql  filter_and_aggregation.sql  seasonal_temperature_profiles.sql  weather_anomaly_detection.sql
big-query/project_01/schema/: noaa_gsod.gsod2023.json  samples.gsod.json
big-query/shared/: authentication.py  costs.py  secrets.py
vertex-ai/: README.md  pyproject.toml
vertex-ai/project_00/: README.md  main.py
vertex-ai/shared/: authentication.py  constants.py  secrets.py
